--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -658,6 +658,17 @@
   file = {C:\Users\paulc\Zotero\storage\367APIR4\S0264275118311636.html}
 }
 
+@phdthesis{Horton:ParkingBreak:,
+  title = {{Parking Break Multi-unit residential off-street parking requirements in Canada}},
+  author = {Horton, Ted},
+  urldate = {2024-06-06},
+  abstract = {Parking requirements are an important part of urban planning. Parking influences a number of behaviours and measures relevant to planning, including mode choice, density, urban form and housing affordability. Much research on parking has taken place in American cities which have different demographic, regulatory, and transportation contexts than Canadian ones. This research is an examination of off-street parking requirements in Canadian cities. It focuses on parking standards for multi-unit residential buildings, explores different approaches used in this regulatory practice and sheds light on the ways in which Canadian cities are dealing with parking requirements today. This is done through a scan of parking requirements across the 30 largest cities in the country, the detailed analysis of parking policies and of their objectives in four cities, and interviews with professionals in Toronto and Vancouver on the political, economic and institutional forces that have shaped their city's parking regulations. Findings suggest that large Canadian cities are facing pressure to better manage their parking systems, leading to the development of new tools to regulate parking in increasingly sophisticated ways. The paper concludes with recommendations for planners to consider when developing parking requirements, cautions them about the ways in which such requirements can be misused, and encourages them to continue to innovate and challenge accepted practices of parking regulation.},
+  collaborator = {Fischler, Rapha{\"e}l (Supervisor)},
+  langid = {http://id.loc.gov/vocabulary/iso639-2/eng},
+  school = {McGill University},
+  keywords = {Urban Planning}
+}
+
 @article{Inci:ReviewEconomics:2015,
   title = {A Review of the Economics of Parking},
   author = {Inci, Eren},
@@ -1256,6 +1267,27 @@
   file = {C:\Users\paulc\AppData\Local\Microsoft\Windows\INetCache\IE\86ZH1ESP\politique_de_stationnement_v2[1].pdf}
 }
 
+@misc{VilledeQuebec:AdoptionReglement:2024,
+  title = {Adoption Du {{R{\`e}glement}} Modifiant Le {{R{\`e}glement}} d'harmonisation Sur l'urbanisme et Les R{\`e}glements d'arrondissement Sur l'urbanisme Relativement Au Nombre Minimal de Cases de Stationnement Requis Pour Un Usage de La Classe {{Habitation}}, {{R}}.{{V}}.{{Q}}. 3303},
+  author = {{Ville de Qu{\'e}bec}},
+  year = {2024},
+  month = may,
+  urldate = {2024-06-10},
+  file = {C:\Users\paulc\Zotero\storage\BAKHPNU9\PA2024-048.pdf}
+}
+
+@misc{VilledeQuebec:GrilleSpecifications:2024,
+  title = {{Grille de sp{\'e}cifications du zonage - Grille de sp{\'e}cifications du zonage - Donn{\'e}es Qu{\'e}bec}},
+  author = {{Ville de Qu{\'e}bec}},
+  year = {2024},
+  month = jun,
+  urldate = {2024-06-10},
+  abstract = {Grille de sp{\'e}cifications du zonage de la Ville de Qu{\'e}bec.},
+  howpublished = {https://www.donneesquebec.ca/recherche/dataset/grille-de-specifications-du-zonage/resource/85b49cce-7756-41c6-b77f-8df395aea201},
+  langid = {french},
+  file = {C:\Users\paulc\Zotero\storage\EI3CIYXH\85b49cce-7756-41c6-b77f-8df395aea201.html}
+}
+
 @misc{VilledeQuebec:PanneauxSignalisation:2024,
   title = {{Panneaux de signalisation - Stationnement - Panneaux de stationnement - Donn{\'e}es Qu{\'e}bec}},
   author = {{Ville de Qu{\'e}bec}},
@@ -1266,6 +1298,41 @@
   howpublished = {https://www.donneesquebec.ca/recherche/dataset/vque\_7/resource/27480cd1-ab19-47fe-a93b-9d526a0eb1e3},
   langid = {french},
   file = {C:\Users\paulc\Zotero\storage\RNCWY5ZV\27480cd1-ab19-47fe-a93b-9d526a0eb1e3.html}
+}
+
+@misc{VilledeQuebec:PortailReglements:,
+  title = {{Portail des r{\`e}glements municipaux de la Ville de Qu{\'e}bec - R{\`e}glement sur le zonage et l'urbanisme}},
+  author = {des affaires juridiques {Ville de Qu{\'e}bec}, Service},
+  journal = {R{\`e}glements municipaux de la Ville de Qu{\'e}bec},
+  publisher = {Ville de Qu{\'e}bec - Communications {\'e}lectroniques},
+  urldate = {2024-06-06},
+  abstract = {L'outil de recherche par excellence pour trouver un r{\`e}glement municipal parmi la banque de r{\`e}glements codifi{\'e}s ou annuels de la Ville de Qu{\'e}bec.},
+  howpublished = {https://reglements.ville.quebec.qc.ca/},
+  langid = {fre}
+}
+
+@misc{VilledeQuebec:PortailReglements:a,
+  title = {{Portail des r{\`e}glements municipaux de la Ville de Qu{\'e}bec - R{\`e}glement d'harmonisation sur l'urbanisme}},
+  author = {des affaires juridiques {Ville de Qu{\'e}bec}, Service},
+  journal = {R{\`e}glements municipaux de la Ville de Qu{\'e}bec},
+  publisher = {Ville de Qu{\'e}bec - Communications {\'e}lectroniques},
+  urldate = {2024-06-08},
+  abstract = {L'outil de recherche par excellence pour trouver un r{\`e}glement municipal parmi la banque de r{\`e}glements codifi{\'e}s ou annuels de la Ville de Qu{\'e}bec.},
+  howpublished = {https://reglements.ville.quebec.qc.ca/},
+  langid = {fre},
+  file = {C:\Users\paulc\Zotero\storage\4P9SXLXH\R.V.Q.1400.html}
+}
+
+@misc{VilledeQuebec:ZonageMunicipal:2024,
+  title = {{Zonage municipal - Zones - Donn{\'e}es Qu{\'e}bec}},
+  author = {{Ville de Qu{\'e}bec}},
+  year = {2024},
+  month = jun,
+  urldate = {2024-06-10},
+  abstract = {Cartographie des limites de zonage municipal.},
+  howpublished = {https://www.donneesquebec.ca/recherche/dataset/vque\_56},
+  langid = {french},
+  file = {C:\Users\paulc\Zotero\storage\WI23FC5X\vque_56.html}
 }
 
 @article{Voulgaris:SynergisticNeighborhood:2017,
