Updates 19 june - Started working on image segmentation documentation

--- a/7-1-Details_Solution.tex
+++ b/7-1-Details_Solution.tex
@@ -9,7 +9,7 @@ Le tableau \ref{tab:donnees_disponibles_Québec} résume les données disponible
 \begin{landscape}
 \begin{table}[h!]
   \centering
-   \begin{tabular}{l l p{.3 \linewidth} p{.15\linewidth} l } 
+   \begin{tabular}{p{.2 \linewidth} l p{.3 \linewidth} p{.15\linewidth} l } 
    \hline
    Géobase & Type & Description  & Source & Date public.\\ 
    \hline
@@ -21,7 +21,11 @@ Le tableau \ref{tab:donnees_disponibles_Québec} résume les données disponible
    \hline
    vq\_stationnement\_2021  & Polylignes    & Bords des aires de stationnement           & Ville de Québec / Geo-index & 8 mai 2021\\
    \hline
-   vdq\_voie\_publique            & Lignes        & Centres de chaussées trottoirs séparés et pistes cyclables & Ville de Québec / Geo-index & 16 avril 2024 \\
+   vdq\_voie\_publique            & Lignes        & Centres de chaussées trottoirs séparés et pistes cyclables & Ville de Québec / Données Québec & 16 avril 2024 \\
+   \hline
+   vdq\_intersection\_voie \_publique & Lignes & intersections avec les dispositifs de contrôle & Ville de Québec / Données Québec & 8 mai 2024 \\
+   \hline
+   vdq\_quartiers & Polygones &Séparation de la ville en quartiers & Ville de Québec / Données Québec & 8 mai 2024\\
    \hline
    Usages prédominants 2023  & Polygones & Usages prédominants du sol &   Ministère des Affaires municipales et de l'Habitation & 21 mai 2024 \\
    \hline
