--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -1,3 +1,10 @@
+@misc{:GeoindexPolytechnique:,
+  title = {G{\'e}oindex - {{Polytechnique Montr{\'e}al}}},
+  urldate = {2024-06-11},
+  howpublished = {https://geoapp.bibl.ulaval.ca/Home/Index},
+  file = {C:\Users\paulc\Zotero\storage\BF8N8BZV\Index.html}
+}
+
 @incollection{:HandbookTransport:2023,
   title = {Handbook on {{Transport}} and {{Land Use}}: {{A Holistic Approach}} in an {{Age}} of {{Rapid Technological Change}}},
   shorttitle = {Handbook on {{Transport}} and {{Land Use}}},
@@ -83,6 +90,23 @@
   abstract = {Machine/Deep Learning (ML/DL) techniques have been applied to large data sets in order to extract relevant information and for making predictions. The performance and the outcomes of different ML/DL algorithms may vary depending upon the data sets being used, as well as on the suitability of algorithms to the data and the application domain under consideration. Hence, determining which ML/DL algorithm is most suitable for a specific application domain and its related data sets would be a key advantage. To respond to this need, a comparative analysis of well-known ML/DL techniques, including Multilayer Perceptron, K-Nearest Neighbors, Decision Tree, Random Forest, and Voting Classifier (or the Ensemble Learning Approach) for the prediction of parking space availability has been conducted. This comparison utilized Santander's parking data set, initiated while working on the H2020 WISE-IoT project. The data set was used in order to evaluate the considered algorithms and to determine the one offering the best prediction. The results of this analysis show that, regardless of the data set size, the less complex algorithms like Decision Tree, Random Forest, and KNN outperform complex algorithms such as Multilayer Perceptron, in terms of higher prediction accuracy, while providing comparable information for the prediction of parking space availability. In addition, in this paper, we are providing Top-K parking space recommendations on the basis of distance between current position of vehicles and free parking spots.},
   langid = {english},
   file = {C:\Users\paulc\Zotero\storage\M72R523Q\Awan et al. - 2020 - A Comparative Analysis of MachineDeep Learning Mo.pdf}
+}
+
+@misc{Azimi:SkyScapesFineGrained:2020,
+  title = {{{SkyScapes}} -- {{Fine-Grained Semantic Understanding}} of {{Aerial Scenes}}},
+  author = {Azimi, Seyed Majid and Henry, Corentin and Sommer, Lars and Schumann, Arne and Vig, Eleonora},
+  year = {2020},
+  month = jul,
+  number = {arXiv:2007.06102},
+  eprint = {2007.06102},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2007.06102},
+  urldate = {2024-06-19},
+  abstract = {Understanding the complex urban infrastructure with centimeter-level accuracy is essential for many applications from autonomous driving to mapping, infrastructure monitoring, and urban management. Aerial images provide valuable information over a large area instantaneously; nevertheless, no current dataset captures the complexity of aerial scenes at the level of granularity required by real-world applications. To address this, we introduce SkyScapes, an aerial image dataset with highly-accurate, fine-grained annotations for pixel-level semantic labeling. SkyScapes provides annotations for 31 semantic categories ranging from large structures, such as buildings, roads and vegetation, to fine details, such as 12 (sub-)categories of lane markings. We have defined two main tasks on this dataset: dense semantic segmentation and multi-class lane-marking prediction. We carry out extensive experiments to evaluate state-of-the-art segmentation methods on SkyScapes. Existing methods struggle to deal with the wide range of classes, object sizes, scales, and fine details present. We therefore propose a novel multi-task model, which incorporates semantic edge detection and is better tuned for feature extraction from a wide range of scales. This model achieves notable improvements over the baselines in region outlines and level of detail on both tasks.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\NEEX6QV8\\Azimi et al. - 2020 - SkyScapes -- Fine-Grained Semantic Understanding o.pdf;C\:\\Users\\paulc\\Zotero\\storage\\PQIDAFHC\\2007.html}
 }
 
 @article{Benenson:PARKAGENTAgentbased:2008,
@@ -418,8 +442,7 @@
   doi = {10.1016/j.landurbplan.2010.02.004},
   urldate = {2024-02-07},
   abstract = {The primary objective of this paper is to quantify the areal footprint of parking lots across a four state region including Illinois, Indiana, Michigan and Wisconsin located in the Upper Great Lakes Basin. Parking lots are virtually everywhere in urban and suburban environments, are often larger than the building footprints they serve yet they are largely unregulated on a regional scale. We focus on a method that estimates parking lot coverage over the four state region and use independent studies to estimate model parameters and validate our model. In total, we estimate that the states of Illinois, Indiana, Michigan and Wisconsin allocate 1260km2 of their land to parking lots, with the lower bound of the estimate at 976km2 and the upper bound at 1745km2. This accounts for approximately 4.97\% of urban land use and over 43 million parking spaces whereas the number of adults over 18 years old in these four states amounted to just over 25 million. The estimated number of spaces per vehicle in each state ranges from 2.49 in Indiana to 2.95 in Michigan. Within the four states studied, states that had a higher proportion of their urban land devoted to parking lots were states where urban sprawl was more prevalent.},
-  keywords = {Environment,Footprint,Impervious surface,Parking,Sprawl,Urbanization},
-  file = {C\:\\Users\\paulc\\Zotero\\storage\\EC2NE5IJ\\S0169204610000356.html;C\:\\Users\\paulc\\Zotero\\storage\\SB7X34ES\\S0169204610000356.html}
+  keywords = {Environment,Footprint,Impervious surface,Parking,Sprawl,Urbanization}
 }
 
 @article{DeGruyter:ApartmentResidents:2023,
@@ -436,6 +459,22 @@
   urldate = {2024-05-24},
   abstract = {In planning new apartment developments, off-street car parking provision is frequently raised as a key concern. However, there is little understanding of the adequacy of off-street car parking for individual apartment households. Drawing on a survey of apartment residents in Perth, Melbourne, and Sydney (n~=~1316), this research assesses the adequacy of off-street car parking provision for apartment households and provides an understanding of factors associated with an undersupply and oversupply of off-street car parking. Results show that around two-thirds (65.9\%) of apartment households have a `balanced' amount of off-street car parking, where the number of cars owned is equal to the number of allocated off-street car parking spaces. The remaining households either have an oversupply of off-street car parking (20.2\%) or an undersupply (14.0\%), almost always involving one parking space too many or one too few. Factors associated with an under/oversupply of off-street car parking are found to be largely related to household characteristics and residents' perceptions of parking issues. The findings highlight the potential for `unbundling' off-street car parking from the purchase price or rental cost of apartment housing, while developing more tailored residential parking requirements that seek to prevent an under/oversupply of parking.},
   keywords = {Apartment multi-family housing,Car parking,Off-street parking}
+}
+
+@article{DeGruyter:CanHigh:2020,
+  title = {Can High Quality Public Transport Support Reduced Car Parking Requirements for New Residential Apartments?},
+  author = {De Gruyter, Chris and Truong, Long T. and Taylor, Elizabeth J.},
+  year = {2020},
+  month = jan,
+  journal = {Journal of Transport Geography},
+  volume = {82},
+  pages = {102627},
+  issn = {0966-6923},
+  doi = {10.1016/j.jtrangeo.2019.102627},
+  urldate = {2024-06-14},
+  abstract = {This paper explores the extent to which high quality public transport can support reduced car parking requirements for new residential apartment buildings. Using a case study of Melbourne, the demand for car parking at residential apartment buildings in proximity to high frequency public transport is assessed, while controlling for a range of socio-demographic, urban design and demand management variables. Key findings indicate that while lower demand for car parking is associated with proximity to high quality public transport, this association is not significant when controlling for other factors that influence car ownership. Public transport service supply within 800~m of residential apartment buildings was instead found to be significant, rather than simple distance to transit. Modelling results suggest an inelastic relationship whereby a 10\% increase in public transport service supply is associated with a 0.9--1.2\% reduction in car parking demand as measured by levels of car ownership. Notwithstanding broader criticisms of residential off-street parking minimums, the findings have important implications for the development of residential car parking policies, suggesting that city-wide car parking requirements should appropriately reflect the spatial distribution and quality of public transport services.},
+  keywords = {Apartments,Car ownership,Car parking,Public transport,Residential development,Transit},
+  file = {C:\Users\paulc\Zotero\storage\IZ95P64N\S0966692319308889.html}
 }
 
 @article{Dey:DemarcateNot:2016,
@@ -593,6 +632,23 @@
   file = {C:\Users\paulc\Zotero\storage\S8UHRMEH\Hay et Shaz - Parking and Mode Choice in Sydney Evidence from t.pdf}
 }
 
+@misc{He:MaskRCNN:2018,
+  title = {Mask {{R-CNN}}},
+  author = {He, Kaiming and Gkioxari, Georgia and Doll{\'a}r, Piotr and Girshick, Ross},
+  year = {2018},
+  month = jan,
+  number = {arXiv:1703.06870},
+  eprint = {1703.06870},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.1703.06870},
+  urldate = {2024-06-19},
+  abstract = {We present a conceptually simple, flexible, and general framework for object instance segmentation. Our approach efficiently detects objects in an image while simultaneously generating a high-quality segmentation mask for each instance. The method, called Mask R-CNN, extends Faster R-CNN by adding a branch for predicting an object mask in parallel with the existing branch for bounding box recognition. Mask R-CNN is simple to train and adds only a small overhead to Faster R-CNN, running at 5 fps. Moreover, Mask R-CNN is easy to generalize to other tasks, e.g., allowing us to estimate human poses in the same framework. We show top results in all three tracks of the COCO suite of challenges, including instance segmentation, bounding-box object detection, and person keypoint detection. Without bells and whistles, Mask R-CNN outperforms all existing, single-model entries on every task, including the COCO 2016 challenge winners. We hope our simple and effective approach will serve as a solid baseline and help ease future research in instance-level recognition. Code has been made available at: https://github.com/facebookresearch/Detectron},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\MMFA24MX\\He et al. - 2018 - Mask R-CNN.pdf;C\:\\Users\\paulc\\Zotero\\storage\\Y6692LT6\\1703.html}
+}
+
 @inproceedings{Hellekes:AssimilationParking:2021,
   title = {Assimilation of Parking Space Information Derived from Remote Sensing Data into a Transport Demand Model},
   booktitle = {{{ITS World Congress}} 2021: {{Book}} of {{Abstracts}}},
@@ -667,6 +723,26 @@
   langid = {http://id.loc.gov/vocabulary/iso639-2/eng},
   school = {McGill University},
   keywords = {Urban Planning}
+}
+
+@article{Hurst-Tarrab:RobustParking:2020,
+  title = {Robust {{Parking Block Segmentation}} from a {{Surveillance Camera Perspective}}},
+  author = {{Hurst-Tarrab}, Nisim and Chang, Leonardo and {Gonzalez-Mendoza}, Miguel and {Hernandez-Gress}, Neil},
+  year = {2020},
+  month = jan,
+  journal = {Applied Sciences},
+  volume = {10},
+  number = {15},
+  pages = {5364},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  issn = {2076-3417},
+  doi = {10.3390/app10155364},
+  urldate = {2024-06-11},
+  abstract = {Parking block regions host dangerous behaviors that can be detected from a surveillance camera perspective. However, these regions are often occluded, subject to ground bumpiness or steep slopes, and thus they are hard to segment. Firstly, the paper proposes a pyramidal solution that takes advantage of satellite views of the same scene, based on a deep Convolutional Neural Network (CNN). Training a CNN from the surveillance camera perspective is rather impossible due to the combinatory explosion generated by multiple point-of-views. However, CNNs showed great promise on previous works over satellite images. Secondly, even though there are many datasets for occupancy detection in parking lots, none of them were designed to tackle the parking block segmentation problem directly. Given the lack of a suitable dataset, we also propose APKLOT, a dataset of roughly 7000 polygons for segmenting parking blocks from the satellite perspective and from the camera perspective. Moreover, our method achieves more than 50\% intersection over union (IoU) in all the testing sets, that is, at both the satellite view and the camera view.},
+  copyright = {http://creativecommons.org/licenses/by/3.0/},
+  langid = {english},
+  keywords = {deep learning,parking block segmentation,parking lot dataset,satellite dataset},
+  file = {C:\Users\paulc\Zotero\storage\UFZV967T\Hurst-Tarrab et al. - 2020 - Robust Parking Block Segmentation from a Surveilla.pdf}
 }
 
 @article{Inci:ReviewEconomics:2015,
@@ -857,6 +933,19 @@
   abstract = {Parking pricing (also called user pay and metered parking) refers to direct charges for using a parking space. Efficient parking pricing can provide numerous benefits including increased turnover and therefore improved user convenience, parking facility cost savings, reduced traffic problems, and increased revenues. This report provides guidance on parking pricing implementation. It describes parking pricing benefits and costs, ways to overcome common obstacles and objections, and examples of successful parking pricing programs. Parking pricing is best implemented as part of an integrated parking management program. Current trends are increasing the benefits of efficient parking pricing. Legitimate objections to parking pricing can be addressed with appropriate policies and strategies.},
   langid = {english},
   file = {C:\Users\paulc\Zotero\storage\H97C3K3S\Litman - Parking Pricing Implementation Guide.pdf}
+}
+
+@article{Liu:DeepLearning:2020,
+  title = {Deep {{Learning}} for {{Generic Object Detection}}: {{A Survey}}},
+  shorttitle = {Deep {{Learning}} for {{Generic Object Detection}}},
+  author = {Liu, Li and Ouyang, Wanli and Wang, Xiaogang and Fieguth, Paul and Chen, Jie and Liu, Xinwang and Pietik{\"a}inen, Matti},
+  year = {2020},
+  month = feb,
+  journal = {International Journal of Computer Vision},
+  volume = {128},
+  doi = {10.1007/s11263-019-01247-4},
+  abstract = {Object detection, one of the most fundamental and challenging problems in computer vision, seeks to locate object instances from a large number of predefined categories in natural images. Deep learning techniques have emerged as a powerful strategy for learning feature representations directly from data and have led to remarkable breakthroughs in the field of generic object detection. Given this period of rapid evolution, the goal of this paper is to provide a comprehensive survey of the recent achievements in this field brought about by deep learning techniques. More than 300 research contributions are included in this survey, covering many aspects of generic object detection: detection frameworks, object feature representation, object proposal generation, context modeling, training strategies, and evaluation metrics. We finish the survey by identifying promising directions for future research.},
+  file = {C:\Users\paulc\Zotero\storage\RMBQ5H8F\Liu et al. - 2020 - Deep Learning for Generic Object Detection A Surv.pdf}
 }
 
 @inproceedings{Marshall:ParkingMixeduse:2006,
@@ -1059,7 +1148,19 @@
   abstract = {En 2010, le Minist{\`e}re des Transports avait pris la d{\'e}cision de doter chaque r{\'e}gion du Qu{\'e}bec d'un plan territorial de mobilit{\'e} durable. Pour ce faire, la Direction du transport collectif et de la planification m{\'e}tropolitaine avait le mandat de compl{\'e}ter les diff{\'e}rentes {\'e}tudes th{\'e}matiques n{\'e}cessaires. Ces {\'e}tudes th{\'e}matiques visaient la compr{\'e}hension des ph{\'e}nom{\`e}nes m{\'e}tropolitains et des enjeux de mobilit{\'e} afin d'orienter les actions du minist{\`e}re. Il est ainsi apparu central d'examiner la fonction du stationnement.},
   collaborator = {Milord, Brigitte and Bourdeau, Jean-Simon and Henno, Eudes},
   langid = {canadien},
-  file = {C\:\\Users\\paulc\\Zotero\\storage\\VJEKPF8Z\\Le stationnement dans la métropole bâtir des conn.pdf;C\:\\Users\\paulc\\Zotero\\storage\\4XJ8XISF\\le-stationnement-dans-la-metropole-batir-des-connaissances-pour-une-mobilite-urbaine-durable-1.html}
+  file = {C:\Users\paulc\Zotero\storage\VJEKPF8Z\Le stationnement dans la métropole bâtir des conn.pdf}
+}
+
+@mastersthesis{Pesek:MaskRCNN:2018,
+  title = {Mask {{R-CNN}} in {{GRASS GIS}}},
+  author = {Pe{\v s}ek, Bc Ond{\v r}ej},
+  year = {2018},
+  address = {Prague, CZ},
+  urldate = {2024-06-18},
+  abstract = {The goal of this thesis is to develop software tools allowing the user to use Mask R-CNN (Mask region-based convolutional neural networks) in GRASS GIS. These tools allow the user to train his own Mask R-CNN model and use it to get vector masks from raster data. In the text of the thesis, the theory behind convolutional neural networks is introduced, followed by a list of their possible applications in the field of computer vision, a brief sketch of used technologies and is ended with a part dedicated to the implementation itself. The appendix contains a user manual and examples of usage.},
+  langid = {english},
+  school = {CZECH TECHNICAL UNIVERSITY IN PRAGUE},
+  file = {C:\Users\paulc\Zotero\storage\PKADCW7N\Pešek - Mask R-CNN in GRASS GIS.pdf}
 }
 
 @misc{ReginaPlanningCommission:TemporaryDowntown:2021,
@@ -1073,6 +1174,34 @@
   howpublished = {http://reginask.iqm2.com/Citizens/Detail\_Meeting.aspx?ID=5041},
   langid = {english},
   file = {C\:\\Users\\paulc\\Zotero\\storage\\9XVWIZQU\\FileOpen.pdf;C\:\\Users\\paulc\\Zotero\\storage\\A5LGTX3W\\Regina Planning Commission - 2021 - Temporary Downtown Surface Parking Lots.pdf;C\:\\Users\\paulc\\Zotero\\storage\\H5BUKTSY\\FileOpen.pdf;C\:\\Users\\paulc\\Zotero\\storage\\HE2LMTUM\\FileOpen.pdf;C\:\\Users\\paulc\\Zotero\\storage\\RSH7N434\\FileOpen.pdf}
+}
+
+@misc{Remillard:JremillardImagestoosm:2024,
+  title = {Jremillard/Images-to-Osm},
+  author = {Remillard, Jason},
+  year = {2024},
+  month = jun,
+  urldate = {2024-06-19},
+  abstract = {Use Mask R-CNN/Keras/TensorFlow and OSM to find features in satellite images for fun.},
+  copyright = {MIT}
+}
+
+@article{Reyna:GrowthUrban:2015,
+  title = {The {{Growth}} of {{Urban Building Stock}}: {{Unintended Lock-in}} and {{Embedded Environmental Effects}}},
+  shorttitle = {The {{Growth}} of {{Urban Building Stock}}},
+  author = {Reyna, Janet L. and Chester, Mikhail V.},
+  year = {2015},
+  journal = {Journal of Industrial Ecology},
+  volume = {19},
+  number = {4},
+  pages = {524--537},
+  issn = {1530-9290},
+  doi = {10.1111/jiec.12211},
+  urldate = {2024-06-11},
+  abstract = {Building stocks constitute enduring components of urban infrastructure systems, but little research exists on their residence time or changing environmental impacts. Using Los Angeles County, California, as a case study, a framework is developed for assessing the changes of building stocks in cities (i.e., a generalizable framework for estimating the construction and deconstruction rates), the residence time of buildings and their materials, and the associated embedded environmental impacts. In Los Angeles, previous land-use decisions prove not easily reversible, and past building stock investments may continue to constrain the energy performance of buildings. The average age of the building stock has increased steadily since 1920 and more rapidly after the post--World War II construction surge in the 1950s. Buildings will likely endure for 60 years or longer, making this infrastructure a quasi-permanent investment. The long residence time, combined with the physical limitations on outward growth, suggest that the Los Angeles building stock is unlikely to have substantial spatial expansion in the future. The construction of buildings requires a continuous investment in material, monetary, and energetic resources, resulting in environmental impacts. The long residence time of structures implies a commitment to use and maintain the infrastructure, potentially creating barriers to an urban area's ability to improve energy efficiency. The immotility of buildings, coupled with future environmental goals, indicates that urban areas will be best positioned by instituting strategies that ensure reductions in life cycle (construction, use, and demolition) environmental impacts.},
+  langid = {english},
+  keywords = {buildings,embedded environmental effects,greenhouse gas (GHG) emissions,industrial ecology,sustainable city,urban infrastructure growth},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\3JTKF25I\\Reyna et Chester - 2015 - The Growth of Urban Building Stock Unintended Loc.pdf;C\:\\Users\\paulc\\Zotero\\storage\\FW4YYPIS\\jiec.html}
 }
 
 @techreport{Scharnhorst:QuantifiedParking:2018,
@@ -1192,6 +1321,24 @@
   keywords = {Computer graphics,Database systems,Information retrieval systems,Mapping,Maps,Parking}
 }
 
+@article{Tong:EstimationParking:2004,
+  title = {Estimation of Parking Accumulation Profiles from Survey Data},
+  author = {Tong, C. O. and Wong, S. C. and Leung, B. S. Y.},
+  year = {2004},
+  month = may,
+  journal = {Transportation},
+  volume = {31},
+  number = {2},
+  pages = {183--202},
+  issn = {1572-9435},
+  doi = {10.1023/B:PORT.0000016579.36253.a9},
+  urldate = {2024-06-17},
+  abstract = {Parking accumulation profiles at car parks are time-dependent quantities that require data from lengthy observation surveys. However, it is found that car parks can be clustered into groups based on the similarity in the shape of their accumulation profiles. This procedure increases the efficiency of the survey data collected for this purpose. This paper describes a method developed to estimate aggregate parking accumulation profiles at different districts in a city. The planning of the survey conducted in Hong Kong in the year 2000 and the results of the data analysis are also described.},
+  langid = {english},
+  keywords = {cluster analysis,parking accumulation profile},
+  file = {C:\Users\paulc\Zotero\storage\6RKCANIT\Tong et al. - 2004 - Estimation of parking accumulation profiles from s.pdf}
+}
+
 @techreport{Translink:2018Regional:2019,
   title = {The 2018 {{Regional Parking Study}}},
   author = {{Translink} and {Metro Vancouver Regional Planning}},
@@ -1300,27 +1447,30 @@
   file = {C:\Users\paulc\Zotero\storage\RNCWY5ZV\27480cd1-ab19-47fe-a93b-9d526a0eb1e3.html}
 }
 
-@misc{VilledeQuebec:PortailReglements:,
-  title = {{Portail des r{\`e}glements municipaux de la Ville de Qu{\'e}bec - R{\`e}glement sur le zonage et l'urbanisme}},
-  author = {des affaires juridiques {Ville de Qu{\'e}bec}, Service},
-  journal = {R{\`e}glements municipaux de la Ville de Qu{\'e}bec},
-  publisher = {Ville de Qu{\'e}bec - Communications {\'e}lectroniques},
-  urldate = {2024-06-06},
-  abstract = {L'outil de recherche par excellence pour trouver un r{\`e}glement municipal parmi la banque de r{\`e}glements codifi{\'e}s ou annuels de la Ville de Qu{\'e}bec.},
-  howpublished = {https://reglements.ville.quebec.qc.ca/},
-  langid = {fre}
+@misc{VilledeQuebec:ReglementHarmonisation:2009,
+  title = {{R{\`e}glement d'harmonisation sur l'urbanisme}},
+  author = {{Ville de Qu{\'e}bec}},
+  year = {2009},
+  month = apr,
+  urldate = {2024-06-11},
+  chapter = {590,591,592,592,594},
+  langid = {french}
 }
 
-@misc{VilledeQuebec:PortailReglements:a,
-  title = {{Portail des r{\`e}glements municipaux de la Ville de Qu{\'e}bec - R{\`e}glement d'harmonisation sur l'urbanisme}},
-  author = {des affaires juridiques {Ville de Qu{\'e}bec}, Service},
-  journal = {R{\`e}glements municipaux de la Ville de Qu{\'e}bec},
-  publisher = {Ville de Qu{\'e}bec - Communications {\'e}lectroniques},
-  urldate = {2024-06-08},
-  abstract = {L'outil de recherche par excellence pour trouver un r{\`e}glement municipal parmi la banque de r{\`e}glements codifi{\'e}s ou annuels de la Ville de Qu{\'e}bec.},
-  howpublished = {https://reglements.ville.quebec.qc.ca/},
-  langid = {fre},
-  file = {C:\Users\paulc\Zotero\storage\4P9SXLXH\R.V.Q.1400.html}
+@misc{VilledeQuebec:ReglementZonage:1995,
+  title = {R{\`e}glement Sur Le Zonage et l'urbanisme},
+  author = {{Ville de Qu{\'e}bec}},
+  year = {1995},
+  month = mar,
+  urldate = {2024-06-11},
+  chapter = {Annexe D}
+}
+
+@misc{VilledeQuebec:ReperesChronologique:,
+  title = {Rep{\`e}res Chronologique Concernant La Ville de {{Qu{\'e}bec}}},
+  author = {{Ville de Qu{\'e}bec}},
+  urldate = {2024-06-11},
+  file = {C:\Users\paulc\Zotero\storage\S2GP4H2F\reperes_chronologiques_ville.pdf}
 }
 
 @misc{VilledeQuebec:ZonageMunicipal:2024,
