--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -92,21 +92,20 @@
   file = {C:\Users\paulc\Zotero\storage\M72R523Q\Awan et al. - 2020 - A Comparative Analysis of MachineDeep Learning Mo.pdf}
 }
 
-@misc{Azimi:SkyScapesFineGrained:2020,
-  title = {{{SkyScapes}} -- {{Fine-Grained Semantic Understanding}} of {{Aerial Scenes}}},
+@inproceedings{Azimi:SkyScapesFineGrained:2019,
+  title = {{{SkyScapes}} \- {{Fine-Grained Semantic Understanding}} of {{Aerial Scenes}}},
+  booktitle = {2019 {{IEEE}}/{{CVF International Conference}} on {{Computer Vision}} ({{ICCV}})},
   author = {Azimi, Seyed Majid and Henry, Corentin and Sommer, Lars and Schumann, Arne and Vig, Eleonora},
-  year = {2020},
-  month = jul,
-  number = {arXiv:2007.06102},
-  eprint = {2007.06102},
-  primaryclass = {cs},
-  publisher = {arXiv},
-  doi = {10.48550/arXiv.2007.06102},
-  urldate = {2024-06-19},
+  year = {2019},
+  month = oct,
+  pages = {7392--7402},
+  publisher = {IEEE Computer Society},
+  doi = {10.1109/ICCV.2019.00749},
+  urldate = {2024-06-20},
   abstract = {Understanding the complex urban infrastructure with centimeter-level accuracy is essential for many applications from autonomous driving to mapping, infrastructure monitoring, and urban management. Aerial images provide valuable information over a large area instantaneously; nevertheless, no current dataset captures the complexity of aerial scenes at the level of granularity required by real-world applications. To address this, we introduce SkyScapes, an aerial image dataset with highly-accurate, fine-grained annotations for pixel-level semantic labeling. SkyScapes provides annotations for 31 semantic categories ranging from large structures, such as buildings, roads and vegetation, to fine details, such as 12 (sub-)categories of lane markings. We have defined two main tasks on this dataset: dense semantic segmentation and multi-class lane-marking prediction. We carry out extensive experiments to evaluate state-of-the-art segmentation methods on SkyScapes. Existing methods struggle to deal with the wide range of classes, object sizes, scales, and fine details present. We therefore propose a novel multi-task model, which incorporates semantic edge detection and is better tuned for feature extraction from a wide range of scales. This model achieves notable improvements over the baselines in region outlines and level of detail on both tasks.},
-  archiveprefix = {arXiv},
-  keywords = {Computer Science - Computer Vision and Pattern Recognition},
-  file = {C\:\\Users\\paulc\\Zotero\\storage\\NEEX6QV8\\Azimi et al. - 2020 - SkyScapes -- Fine-Grained Semantic Understanding o.pdf;C\:\\Users\\paulc\\Zotero\\storage\\PQIDAFHC\\2007.html}
+  isbn = {978-1-72814-803-8},
+  langid = {english},
+  file = {C:\Users\paulc\Zotero\storage\TADMWP98\Azimi et al. - 2019 - SkyScapes ­ Fine-Grained Semantic Understanding of.pdf}
 }
 
 @article{Benenson:PARKAGENTAgentbased:2008,
@@ -536,6 +535,16 @@
   keywords = {Economics,Investments,Land use,Motor transportation,Roads and streets,Sustainable development,Urban planning,Urban transportation}
 }
 
+@book{Fritz:InstanceSegmentation:2020,
+  title = {Instance {{Segmentation}} of {{Buildings}} in {{Satellite Images}}},
+  author = {Fritz, Karin},
+  year = {2020},
+  urldate = {2024-06-20},
+  abstract = {DiVA portal is a finding tool for research publications and student theses written at the following 50 universities and research institutions.},
+  langid = {english},
+  file = {C:\Users\paulc\Zotero\storage\W58WYXZZ\Fritz - 2020 - Instance Segmentation of Buildings in Satellite Im.pdf}
+}
+
 @article{Gabbe:ParkingPolicy:2020,
   title = {Parking Policy: {{The}} Effects of Residential Minimum Parking Requirements in {{Seattle}}},
   shorttitle = {Parking Policy},
@@ -743,6 +752,24 @@
   langid = {english},
   keywords = {deep learning,parking block segmentation,parking lot dataset,satellite dataset},
   file = {C:\Users\paulc\Zotero\storage\UFZV967T\Hurst-Tarrab et al. - 2020 - Robust Parking Block Segmentation from a Surveilla.pdf}
+}
+
+@misc{Iglovikov:TernausNetV2Fully:2018,
+  title = {{{TernausNetV2}}: {{Fully Convolutional Network}} for {{Instance Segmentation}}},
+  shorttitle = {{{TernausNetV2}}},
+  author = {Iglovikov, Vladimir I. and Seferbekov, Selim and Buslaev, Alexander V. and Shvets, Alexey},
+  year = {2018},
+  month = jun,
+  number = {arXiv:1806.00844},
+  eprint = {1806.00844},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.1806.00844},
+  urldate = {2024-06-20},
+  abstract = {The most common approaches to instance segmentation are complex and use two-stage networks with object proposals, conditional random-fields, template matching or recurrent neural networks. In this work we present TernausNetV2 - a simple fully convolutional network that allows extracting objects from a high-resolution satellite imagery on an instance level. The network has popular encoder-decoder type of architecture with skip connections but has a few essential modifications that allows using for semantic as well as for instance segmentation tasks. This approach is universal and allows to extend any network that has been successfully applied for semantic segmentation to perform instance segmentation task. In addition, we generalize network encoder that was pre-trained for RGB images to use additional input channels. It makes possible to use transfer learning from visual to a wider spectral range. For DeepGlobe-CVPR 2018 building detection sub-challenge, based on public leaderboard score, our approach shows superior performance in comparison to other methods. The source code corresponding pre-trained weights are publicly available at https://github.com/ternaus/TernausNetV2},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\94SIWKPK\\Iglovikov et al. - 2018 - TernausNetV2 Fully Convolutional Network for Inst.pdf;C\:\\Users\\paulc\\Zotero\\storage\\B8CZA9WA\\1806.html}
 }
 
 @article{Inci:ReviewEconomics:2015,
